--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,23 @@
-﻿name: Auto Merge on Approval and Passes Checks
+﻿name: CI
 
 on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
+  push:
+    branches: [ main ]
 
 jobs:
-  merge:
+  push_to_registry:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check if Pull Request is Approved
-        id: pr
-        uses: gclpub/pr-branch@release/v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Run Code Checks
-        # Add the necessary steps to check your code (e.g., linters, tests, etc.)
-
-      - name: Merge If Approved and Checks Pass
-        if: steps.pr.outputs.approved == 'true' && success()
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git merge --no-ff ${{ github.event.pull_request.head.sha }}
-          git push
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/simpleappcdci:latest
