--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,5 @@ jobs:
           key: ${{ secrets.HOST_SSH_KEY }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/simpleappcdci:latest
-            docker stop now-try-here-5000
-            docker run -d --name=now-try-here-5000 -p 80:80 ${{ secrets.DOCKER_USERNAME }}/simpleappcdci:latest
+            docker stop white_rabbit-aspnetapp-1
+            docker run -d --name=white_rabbit-aspnetapp-1 -p 5000:80 ${{ secrets.DOCKER_USERNAME }}/simpleappcdci:latest
