--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,4 @@ jobs:
           key: ${{ secrets.HOST_SSH_KEY }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/simpleappcdci:latest
-            docker stop white_rabbit-aspnetapp-1 || true  # Stop the container if it exists (ignoring errors)
-            docker rm white_rabbit-aspnetapp-1 || true    # Remove the container if it exists (ignoring errors)
-            docker run -d --name=white_rabbit-aspnetapp-1 -p 5000:80 ${{ secrets.DOCKER_USERNAME }}/simpleappcdci:latest
+            docker compose up
